# covid-vaccine-modeling

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.py  config.txt  covid_model.py  kernel.cu  main.py  new_covid_model.py  output.txt
diff_equation/: sir.py
diff_equation/disease_simulations/: sir.py
inc/: base_header.hpp  config.hpp  constants.hpp  cuda_kernels.cuh  cuda_utils.cuh  utils.hpp
plots/: connections.txt
script/: script.py
src/: config.cpp  covid_model_class.cpp  covid_model_class.cu  main.cpp
